--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -22,12 +22,10 @@ jobs:
         id: test_module
         uses: zyborg/pester-tests-report@v1
         with:
-          include_paths: tests
-          exclude_paths: tests/powershell1,tests/powershell2
-          exclude_tags: skip_ci
-          report_name: module_tests
-          report_title: My Module Tests
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          include_paths: NHLPS.Tests.ps1
+          report_name: NHLPS Pester Tests
+          report_title: NHLPS Pester Tests
+          # github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: dump test results
         shell: pwsh
         run: |
