--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   PSScriptAnalyzer-lint:
-    name: Install and run PSScriptAnalyzer
+    name: PSScriptAnalyzer Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +37,7 @@ jobs:
               Write-Output "There were $($errors.Count) errors and $($warnings.Count) warnings total."
           }
   pester-test:
-    name: NHLPS Unit Tests
+    name: NHLPS Pester Tests
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
