--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   PSScriptAnalyzer-lint:
-    name: PSScriptAnalyzer Lint
+    name: NHLPS PSScriptAnalyzer Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
