--- a/.github/workflows/Tests-and-deploy.yml
+++ b/.github/workflows/Tests-and-deploy.yml
@@ -35,7 +35,11 @@ jobs:
               Write-Error "There were $($errors.Count) errors and $($warnings.Count) warnings total." -ErrorAction Stop
           } else {
               Write-Output "There were $($errors.Count) errors and $($warnings.Count) warnings total."
-          }
+          }      
+      - name: Test Module Manifest
+        shell: pwsh
+        run: |
+          Test-ModuleManifest -Path *.psd1
   pester_test:
     name: Pester Tests
     runs-on: ubuntu-latest
