--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -1,12 +1,8 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+name: Pre-Merge Tests
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
+  # Triggers the workflow pull request events but only for the "main" branch
   pull_request:
     branches: [ "main" ]
 
@@ -50,14 +46,3 @@ jobs:
         shell: pwsh
         run: |
           Invoke-Pester NHLPS.Tests.ps1 -Passthru
-  job:
-    name: "Deploy to PSGallery"
-    runs-on: ubuntu-latest
-    if: ${{ contains(join(needs.*.result, ','), 'success') }}
-    needs: [PSScriptAnalyzer_lint, pester_test]
-    steps:
-      - name: Hello World        
-        env:
-          NEEDS: ${{ toJSON(needs) }}     
-        run: |
-          echo "$NEEDS"
