--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to PSGallery
+        shell: pwsh
         run: |
             $publishedVersion = Find-Module -Name NHLPS | Select -ExpandProperty "Version"
             $gitVersion = Import-PowerShellDataFile -Path ".\NHLPS\NHLPS.psd1" | Select -ExpandProperty "ModuleVersion"
