--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -25,7 +25,7 @@ jobs:
                 Write-Host "Module manifest version $gitVersion IS greater than PSGallery version $publishedVersion" -ForeGroundColor "Green"
                 Write-Host "Skipping deployment to PSGallery" -ForeGroundColor "Green"
 
-                Publish-Module -Path "./NHLPS/" -NugetAPIKey "${{ secrets.NUGETAPIKEY }}" -Verbose -WhatIf
+                Publish-Module -Path "./NHLPS/" -NugetAPIKey "${{ secrets.NUGETAPIKEY }}" 
             } else {
                 Write-Warning "Module manifest version $gitVersion NOT greater than PSGallery version $publishedVersion"
                 Write-Warning "Skipping deployment to PSGallery"
